--- a/emotion-reader/Sample/app/src/main/res/layout/activity_detection.xml
+++ b/emotion-reader/Sample/app/src/main/res/layout/activity_detection.xml
@@ -1,4 +1,3 @@
-<!-- Copyright (c) Microsoft. All rights reserved. -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -23,6 +22,15 @@
             android:layout_weight="1"
             android:layout_marginBottom="@dimen/view_margin">
 
+            <ImageView
+                android:id="@id/image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/image_control"
+                android:layout_toEndOf="@id/image_control"
+                android:background="#E0E0E0"
+                android:contentDescription="@string/detection" />
+
             <RelativeLayout
                 android:id="@+id/image_control"
                 android:layout_width="100dp"
@@ -36,7 +44,8 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:text="@string/image" />
+                    android:text="@string/image"
+                    android:textSize="18sp"/>
 
                 <Button
                     android:id="@+id/select_image"
@@ -51,21 +60,13 @@
 
             </RelativeLayout>
 
-            <ImageView
-                android:id="@id/image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_toRightOf="@id/image_control"
-                android:layout_toEndOf="@id/image_control"
-                android:background="#E0E0E0"
-                android:contentDescription="@string/detection" />
-
         </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/result" />
+            android:text="@string/result"
+            android:textSize="18sp"/>
 
         <ListView
             android:id="@+id/list_detected_faces"
@@ -111,6 +112,7 @@
             android:text="@string/view_log"
             android:background="@drawable/button_background"
             android:onClick="viewLog"
+            android:visibility="gone"
             style="@style/ButtonStyle" />
 
     </LinearLayout>
