--- a/emotion-reader/Sample/app/src/main/res/layout/activity_main.xml
+++ b/emotion-reader/Sample/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<!-- Copyright (c) Microsoft. All rights reserved. -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -13,31 +12,33 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginBottom="@dimen/view_margin" >
 
         <ScrollView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_weight="1"
-            android:layout_height="match_parent" >
+            android:layout_height="0dp" >
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center"
+                android:textSize="25sp"
                 android:text="@string/detection_description" />
 
         </ScrollView>
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:text="@string/detection"
-            android:layout_weight="1"
-            android:layout_marginLeft="@dimen/view_margin"
-            android:layout_marginStart="@dimen/view_margin"
+            android:layout_marginRight="@dimen/view_margin"
+            android:layout_marginEnd="@dimen/view_margin"
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="100dp"
             android:onClick="detection"
             style="@style/ButtonStyle" />
 
@@ -47,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:visibility="gone"
         android:orientation="horizontal"
         android:layout_marginBottom="@dimen/view_margin" >
 
@@ -81,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:visibility="gone"
         android:orientation="horizontal"
         android:layout_marginBottom="@dimen/view_margin" >
 
@@ -114,6 +117,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:visibility="gone"
         android:orientation="horizontal" >
 
         <ScrollView
@@ -148,6 +152,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:layout_marginBottom="@dimen/view_margin" >
 
         <ScrollView
@@ -177,9 +182,4 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Microsoft will receive the images you upload and may use them to improve Face API and related services. By submitting an image, you confirm that you have consent from everyone in it."/>
 </LinearLayout>
