--- a/emotion-reader/Sample/app/src/main/res/layout/activity_person.xml
+++ b/emotion-reader/Sample/app/src/main/res/layout/activity_person.xml
@@ -1,4 +1,3 @@
-<!-- Copyright (c) Microsoft. All rights reserved. -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -8,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="com.nyuadhack.insahny.persongroupmanagement.PersonActivity">
+    tools:context="com.nyuadhack.insahny.management.PersonActivity">
 
     <RelativeLayout
         android:id="@+id/person_name_view"
