--- a/emotion-reader/Sample/app/src/main/res/layout/activity_person_group_list.xml
+++ b/emotion-reader/Sample/app/src/main/res/layout/activity_person_group_list.xml
@@ -1,4 +1,3 @@
-<!-- Copyright (c) Microsoft. All rights reserved. -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -6,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.nyuadhack.insahny.persongroupmanagement.PersonGroupListActivity">
+    tools:context="com.nyuadhack.insahny.management.PersonGroupListActivity">
 
     <TextView
         android:id="@+id/person_group_list_tip"
