--- a/emotion-reader/Sample/app/src/main/res/menu/menu_delete_items.xml
+++ b/emotion-reader/Sample/app/src/main/res/menu/menu_delete_items.xml
@@ -1,9 +1,8 @@
-<!-- Copyright (c) Microsoft. All rights reserved. -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nyuadhack.insahny.persongroupmanagement.PersonGroupListActivity">
+    tools:context="com.nyuadhack.insahny.management.PersonGroupListActivity">
     <item android:id="@+id/menu_delete_items"
         app:showAsAction="ifRoom"
         android:title="@string/delete" />
